<resources>
    <string name="app_name">Ejercicio</string>
    <string name="lbl_nombre">Digite su nombre</string>
    <string name="txt_nombre"></string>
    <string name="lbl_edad">¿Qué edad tienes?</string>
    <string name="btn_submit">Ingresar</string>
    <string name="lbl_selcat">Seleccione la categoria:</string>
    <string name="chk1">Ocultar 1</string>
    <string name="chk2">Ocultar 2</string>
    <string name="chk3">Ocultar 3</string>
    <string name="chk4">Ocultar 4</string>
    <string name="lbl_userconect">Usuario conectado</string>
    <string name="btn_regresar"></string>
</resources>
